[gd_scene load_steps=8 format=3 uid="uid://bl0jye7mdskqr"]

[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="1_c2l7l"]
[ext_resource type="FontFile" uid="uid://1th6x4p7jvs7" path="res://assets/fonts/Xolonium-Regular.ttf" id="1_wjtcx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a5tgu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4x834"]

[sub_resource type="InputEventAction" id="InputEventAction_82laa"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_koht2"]
events = [SubResource("InputEventAction_82laa")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b226b"]
bg_color = Color(0.485396, 0.596338, 0.999996, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_c2l7l")

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -168.0
offset_right = 512.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_wjtcx")
theme_override_font_sizes/font_size = 64
text = "Prepare yourself"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 90.0
offset_right = 128.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_wjtcx")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_a5tgu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4x834")
shortcut = SubResource("Shortcut_koht2")
text = "Restart"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="KillBar" type="ProgressBar" parent="."]
offset_left = 376.0
offset_top = 48.0
offset_right = 920.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(0.246609, 0.46835, 1, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_b226b")
max_value = 50.0
step = 1.0
show_percentage = false

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
